fixes navbar button issues on mobile

--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -34,6 +34,8 @@ body {
   width: 100%;
   border-radius: 12px;
   padding: 5px;
+  position: relative;
+  z-index: 8;
 }
 
 .nav ul {
@@ -121,5 +123,13 @@ footer {
 
 /******** MEDIA QUERIES ********/
 
+@media (max-width: 768px) {
+  button.navbar-toggle {
+    position: absolute;
+    top: -3px;
+    right: 0;
+    z-index: 1;
+  }
+}
 
 /******** END ********/
